# docs

./: LICENSE  README.md
.github/: CODEOWNERS
_publish/: README.md
adr/: adr-001-repository-licensing-and-contribution-strategy.md
decisions/: README.md  adr-001-repository-licensing-and-contribution-strategy.md
glossary/: README.md
guides/: README.md
reference/: README.md
releases/: README.md
templates/: README.md  _markdown.md  adr.md  architecture.md  justfile  pyproject.toml
togaf/: README.md
togaf/app/: README.md
togaf/biz/: README.md
togaf/dat/: README.md
togaf/tec/: README.md  physical-technology-components.csv
vision/: README.md  initiative-charter.md  project-brief-and-plan.md  project-foundation-doc.md  project-kickoff.md  project-overview-prd-techplan.md
visual-identity/: mermaid-style-guide.md  solarized.md
